# minimalpackage

./: .gitignore  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  sandbox.py  setup.cfg
.github/: commit_checker.yml
.github/workflows/: commit_checker.yml
src/minimalpackage/: __init__.py
src/minimalpackage/data/: sample.json
src/minimalpackage/module1/: Class1.py  __init__.py  function1.py
src/minimalpackage/module2/: Class2.py  __init__.py  function2.py
src/minimalpackage/module3/: __init__.py  function3.py
tests/module1/: test_class1.py  test_function1.py
tests/module2/: test_class2.py  test_function2.py
tests/module3/: test_function3.py
tests/some_tests/: test_function1.py  test_function2.py
