[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minimalpackage"
description = "Example of minimal package."
authors = [{name = "Gilberto Agostinho", email = "gilbertohasnofb@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dynamic = ["version", "dependencies", "optional-dependencies"]
keywords = ["minimalpackage", "template"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
homepage = "https://github.com/gilbertohasnofb/minimalpackage"
documentation = "https://github.com/gilbertohasnofb/minimalpackage"
source = "https://github.com/gilbertohasnofb/minimalpackage"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"

[tool.setuptools]
include-package-data = true
packages = ["minimalpackage"]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"minimalpackage" = ["*.json"]

[tool.setuptools.dynamic]
version = {attr = "minimalpackage._version.__version__"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}
optional-dependencies.test = {file = ["requirements-test.txt"]}

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
case_sensitive = true
line_length = 100
multi_line_output = 3
skip_gitignore = true
include_trailing_comma = true
use_parentheses = true

[tool.pydocstyle]
match_dir = "minimalpackage"
select = ["D101", "D102", "D103", "D105", "D300", "D301"]
