[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minimalpackage"
description = "Example of minimal package."
authors = [{name = "Gilberto Agostinho", email = "gilbertohasnofb@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dynamic = ["version", "dependencies", "optional-dependencies"]
keywords = ["minimalpackage", "template"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
homepage = "https://github.com/gilbertohasnofb/minimalpackage"
documentation = "https://github.com/gilbertohasnofb/minimalpackage"
source = "https://github.com/gilbertohasnofb/minimalpackage"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"

[tool.setuptools]
include-package-data = true
packages = ["minimalpackage"]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"minimalpackage" = ["*.json"]

[tool.setuptools.dynamic]
version = {attr = "minimalpackage._version.__version__"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}
optional-dependencies.test = {file = ["requirements-test.txt"]}

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100
case_sensitive = true
skip_gitignore = true
known_first_party = ["minimalpackage"]

[tool.ruff]
line-length = 100
builtins = ["spark", "dbutils", "display"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "D101", "D102", "D103", "D104", "D105", "D201", "D202", "D204", "D207", "D208",
    "D213", "D214", "D215", "D300", "D301", "D403", "D405", "D410", "D411", "D414",
]
ignore = ["E203"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"main.py" = ["D103"]
"tests/**" = ["D101", "D102", "D103"]
